--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Befit-ec86da79-8841-4815-941f-3ce48bcc9ea2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=befit.db"
   },
   "Logging": {
     "LogLevel": {
